# racehog

./: .gitignore  LICENSE  cleanup.sh  configure.sh
docs/: Doxyfile
src/: CMakeLists.txt
src/Displays/: CMakeLists.txt
src/Displays/ConsoleDisplay/: CMakeLists.txt  ConsoleDisplay.cpp  ConsoleDisplay.h
src/Displays/CountingDisplay/: CMakeLists.txt  CountingDisplay.cpp  CountingDisplay.h
src/Filters/: CMakeLists.txt
src/Filters/DuplicateFilter/: CMakeLists.txt  DuplicateFilter.cpp  DuplicateFilter.h
src/RaceHog/: CMakeLists.txt  RaceHog.cpp  RaceHogCommandLine.cpp  RaceHogCommandLine.h
src/RaceHog/DataRace/: CallStackMetaframe.h  CallStackMetatrace.cpp  CallStackMetatrace.h  DataRace.cpp  DataRace.h  DataRaceAccess.cpp  DataRaceAccess.h  DataRaceLock.h  DataRaceLockPair.h  DataRaceProtection.h  DataRaceQueue.cpp  DataRaceQueue.h
src/RaceHog/Module/: DisplayModule.h  FilterModule.h  InputDataRaceQueueModule.h  Module.h  OutputDataRaceQueueModule.h  SearchSpaceBuilderModule.h
src/SteenX/: CMakeLists.txt
src/SteenX/LLVM/: AtomicLocksTable.cpp  AtomicLocksTable.h  CMakeLists.txt  FunctionTable.cpp  FunctionTable.h  GetElementPtrExtraction.cpp  GetElementPtrExtraction.h  GlobalsInitialiser.cpp  GlobalsInitialiser.h  InstructionExtractor.cpp  InstructionExtractor.h  MetadataExtractor.cpp  MetadataExtractor.h  OperandTranslator.cpp  OperandTranslator.h  SteenXTranslationPass.cpp  SteenXTranslationPass.h  StringTable.h  TypeSizesTable.cpp  TypeSizesTable.h
src/SteenX/LLVM/CallHandler/: CallHandler.h  CallHandlerRegistry.cpp  CallHandlerRegistry.h  CallHandlerToolbox.h  MallocCallHandler.cpp  MallocCallHandler.h  PthreadCreateCallHandler.cpp  PthreadCreateCallHandler.h  PthreadJoinCallHandler.cpp  PthreadJoinCallHandler.h  PthreadMutexLockCallHandler.cpp  PthreadMutexLockCallHandler.h  PthreadMutexUnlockCallHandler.cpp  PthreadMutexUnlockCallHandler.h  RegularCallHandler.cpp  RegularCallHandler.h
src/SteenX/LLVM/Memory/: MemoryAllocator.cpp  MemoryAllocator.h  MemoryManager.cpp  MemoryManager.h
src/SteenX/Program/: Bitfile.cpp  Bitfile.h  BitfileInspector.cpp  BitfileInspectorCommandLine.cpp  BitfileInspectorCommandLine.h  CMakeLists.txt  Function.cpp  Function.h  FunctionReference.h  Program.cpp  Program.h  ProgramLinker.cpp  ProgramLinker.h  ProgramSyntaxChecker.cpp  ProgramSyntaxChecker.h  StringPool.cpp  StringPool.h  StringReference.h
src/SteenX/Program/Instruction/: AcquireInstruction.cpp  AcquireInstruction.h  AllocateInstruction.cpp  AllocateInstruction.h  CallInstruction.cpp  CallInstruction.h  CallInstructionBase.cpp  CallInstructionBase.h  EqualiseInstruction.cpp  EqualiseInstruction.h  ForkInstruction.cpp  ForkInstruction.h  Instruction.cpp  Instruction.h  InstructionVisitor.h  Instructions.h  JoinInstruction.cpp  JoinInstruction.h  LockInstructionBase.h  ReadInstruction.cpp  ReadInstruction.h  ReferenceInstruction.cpp  ReferenceInstruction.h  ReleaseInstruction.cpp  ReleaseInstruction.h  ReturnInstruction.cpp  ReturnInstruction.h  ReturnValueInstructionBase.h  ValueInstructionBase.h  WriteInstruction.cpp  WriteInstruction.h
src/SteenX/Program/Metadata/: Metadata.cpp  Metadata.h  MetadataPool.cpp  MetadataPool.h  MetadataReference.h  MetadataSubpool.h  NamedMetadata.cpp  NamedMetadata.h
src/SteenX/Program/Operand/: ConstantOperand.h  FunctionOperand.cpp  FunctionOperand.h  GlobalMemoryAtomOperand.h  LocalMemoryAtomOperand.h  MemoryAtomOperand.cpp  MemoryAtomOperand.h  Operand.h  OperandVisitor.h  Operands.h
src/SteenX/VM/: CMakeLists.txt  CallContext.h  Clock.h  Environment.cpp  Environment.h  Equaliser.cpp  Equaliser.h  Execution.cpp  Execution.h  ExecutionInteractor.cpp  ExecutionInteractor.h  SteenXBuilder.cpp  SteenXBuilder.h  Thread.cpp  Thread.h  VM.cpp  VM.h
src/SteenX/VM/Memory/: MemoryAccess.cpp  MemoryAccess.h  MemoryAtom.cpp  MemoryAtom.h  MemoryStore.cpp  MemoryStore.h
src/Support/: CMakeLists.txt  DisjointSet.h  Logging.cpp  Logging.h  Macros.h  OptionalTrackingReference.h  TrackingReference.h  derivables.h  range_iterator.h  turbovector.h
src/Support/Stream/: InputStream.cpp  InputStream.h  OutputStream.cpp  OutputStream.h  Printable.h  Serialisable.h  Stream.h  UserStream.cpp  UserStream.h
test/simple/: 01.hello-racehog.c  02.hello-threads.c  03.global-aggregates.c  04.simple-functionptr.c  05.aggregate-pointers.c  06.bitcast-funcptr.c  07.hello-locks.c  08.hello-malloc.c  09.thread-layouts.c  10.hello-atomics.c  11.function-dispatch.c  12.static-local.c  13.global-inits.c  run.sh  thesis.2019.c
